--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <title>Quiz game</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-blue-500 text-white flex justify-center items-center h-screen font-sans">
+  <body class="bg-blue-500 text-white flex justify-center items-center h-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
