--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     -->
     <title>Quiz game</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet">
   </head>
   <body class="bg-blue-500 text-white flex justify-center items-center h-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
